# avnc

./: .gitignore  .gitmodules  Readme.md  build.gradle  gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/libs/: VITURE-SDK-1.0.7.aar
app/roomSchema/com.gaurav.avnc.model.db.MainDb/: 1.json  6.json  7.json
app/src/androidTest/java/com/gaurav/avnc/: BiometricMocking.kt  DatabaseRule.kt  EmptyDatabaseRule.kt  Helpers.kt  Rules.kt  SshTunnelScenario.kt  TestServer.kt  VncSessionScenario.kt
app/src/androidTest/java/com/gaurav/avnc/model/: DatabaseTest.kt
app/src/androidTest/java/com/gaurav/avnc/util/: AppPreferenceTest.kt  KnownHostsTest.kt  LiveEventTest.kt  LiveRequestTest.kt
app/src/androidTest/java/com/gaurav/avnc/viewmodel/: LiveEventTest.kt
app/src/androidTest/java/com/gaurav/avnc/vnc/: VncClientTest.kt  VncUriTest.kt
app/src/debug/java/com/gaurav/avnc/: LeakCanaryInitializer.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/license/: OpenSSL.txt
app/src/main/cpp/: ClientEx.h  Cursor.h  Utility.h  keymap.h  native-vnc.cpp
app/src/main/java/com/gaurav/avnc/: App.kt  Architecture.kt
app/src/main/java/com/gaurav/avnc/model/: Bookmark.kt  LoginInfo.kt  Recent.kt  ServerProfile.kt  VncProfile.kt
app/src/main/java/com/gaurav/avnc/session/: Messenger.kt  RemoteSession.kt
app/src/main/java/com/gaurav/avnc/util/: Layout.kt  (+20 more)
app/src/main/res/color/: checkable_button_icon_color_simple.xml  control_icon.xml  nav_item_text_color.xml
app/src/main/res/drawable/: bg_list_item.xml  bg_main_header.xml  bg_quick_connect.xml  bg_round_rect.xml  bg_round_rect_ripple.xml  bg_selectable.xml  bg_toggle_button.xml  bg_urlbar.xml  focus_overlay.xml  ic_arrow_back.xml  ic_auto_connect.xml  ic_bookmark.xml  ic_broadcast.xml  ic_center_focus.xml  ic_clear.xml  ic_computer.xml  ic_dashboard.xml  ic_experimental.xml  ic_forward.xml  ic_gesture.xml  ic_history.xml  ic_home.xml  ic_input_off.xml  ic_key.xml  ic_keyboard.xml  ic_launch.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_menu.xml  ic_more.xml  ic_notifications.xml  ic_palette.xml  ic_plus.xml  ic_recycle_bin.xml  ic_refresh.xml  ic_search.xml  ic_settings.xml  ic_settings_cog.xml  ic_tap.xml  ic_toolbar_open.xml  (+13 more)
app/src/main/res/layout/: activity_about.xml  activity_home.xml  activity_settings.xml  activity_url.xml  activity_vnc.xml  fragment_about.xml  fragment_bookmark_editor.xml  fragment_bookmarks.xml  fragment_credential.xml  fragment_discovery.xml  fragment_header.xml  fragment_import_export.xml  fragment_info.xml  fragment_key_test.xml  fragment_libraries.xml  fragment_license.xml  fragment_logs.xml  fragment_profile_editor.xml  fragment_profile_editor_advanced.xml  fragment_recents.xml  fragment_servers.xml  fragment_touch_test.xml  fragment_virtual_keys_editor.xml  fragment_welcome.xml  home_drawer_header.xml  item_bookmark.xml  item_discovery.xml  item_recent.xml  item_server.xml  no_video_overlay.xml  server_discovery.xml  server_item.xml  server_profile.xml  server_saved.xml  server_saved_item.xml  toolbar_drawer.xml  viewer_help.xml  virtual_keys.xml  vnc_profile.xml
app/src/main/res/menu/: bookmark_item_menu.xml  bottom_nav_menu.xml  discovered_server.xml  discovered_server_menu.xml  home.xml  home_drawer.xml  main_menu.xml  recent_item_menu.xml  saved_server_editable.xml  server_profile_menu.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: arrays.xml  attrs.xml  bool.xml  colors.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-ckb/: strings.xml
app/src/main/res/values-cs/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-fa/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-gl/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-lv/: strings.xml
app/src/main/res/values-nb-rNO/: strings.xml
app/src/main/res/values-night/: colors.xml  dimens.xml  styles.xml
app/src/main/res/values-pl/: strings.xml
app/src/main/res/values-pt/: strings.xml
app/src/main/res/values-pt-rBR/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-sr/: strings.xml
app/src/main/res/values-ta/: strings.xml
app/src/main/res/values-tr/: strings.xml
app/src/main/res/values-uk/: strings.xml
app/src/main/res/values-v23/: styles.xml
app/src/main/res/values-v27/: styles.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
app/src/main/res/xml/: credential_preferences.xml  experimental_preferences.xml  gesture_preferences.xml  network_preferences.xml  pref_appearance.xml  pref_display.xml  pref_experimental.xml  pref_input.xml  pref_main.xml  pref_server.xml  pref_tools.xml  pref_viewer.xml  preferences.xml  xr_preferences.xml  zoom_preferences.xml
(+282 files in other folders)
